TODO COMPLETE: Generalize visualization from 2 to N dimensions (and classes). See @nd_boundary_plot.plots.nd_boundary_plot(), or check out on github.
TODO: Graph more than one dataset.
TODO: Improve visualization
TODO: Run on synthetic 2D data
TODO: Run on gaussian_quartiles src, hastie_10_2 tgt
TODO: Run on digits/reversed digits
TODO: Run on text data like Enron e-mails (need to think about this one)
Signed-off-by: Dainis Boumber <dainis.boumber@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "modules/nd-boundary-plot"]
-	path = modules/nd-boundary-plot
-	url = https://github.com/dainis-boumber/nd-boundary-plot.git
+[submodule "nd_boundary_plot"]
+	path = nd_boundary_plot
+	url = https://github.com/dainis-boumber/nd_boundary_plot.git
