--- a/.gitignore
+++ b/.gitignore
@@ -561,3 +561,5 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+/data/mnist.csv
+data/mnist.csv
